# tinynn

./: .gitignore  README.md  pyproject.toml
examples/: and_or_xor.py  cnn.py
tinynn/: layer.py  loss.py  nn.py
