[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tinynn"
version = "0.1.0"
description = "A tiny neural network framework implemented from scratch in NumPy"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Dheeraj Vittal Shenoy", email = "dheerajshenoy22@gmail.com" }
]

dependencies = [
    "numpy"
]

[tool.setuptools.packages.find]
where = ["."]

